Objetivo 4 - Vistas. 1. Correcion Query Multas.

--- a/act_Application/Data/json/config.json
+++ b/act_Application/Data/json/config.json
@@ -19,7 +19,7 @@
         "DBQM_SelectMultas": "SELECT (SELECT COUNT(*) FROM act_Multas WHERE Estado = 'PENDIENTE') AS TotalMultas, a.*,  u.NombreYApellido AS NombreUsuario FROM act_Multas a INNER JOIN act_User u ON a.IdUser = u.Id WHERE a.Estado = 'PENDIENTE'",
         "DBQM_SelectMultasUser": "SELECT (SELECT COUNT(*) FROM act_Multas WHERE IdUser = @IdUser) AS TotalMultas, (SELECT COUNT(*) FROM act_Multas WHERE Estado='CANCELADO' AND IdUser = @IdUser) AS TotalCancelados, a.* FROM act_Multas a WHERE a.IdUser = @IdUser AND Estado ='PENDIENTE'",
         "DBQM_SelectMultasId": "SELECT * FROM act_Multas WHERE Id = @Id",
-        "DBQM_SelectMultasIdMult":"SELECT Id FROM act_Multas WHERE IdApor = @IdApor"
+        "DBQM_SelectMultasIdMult":"SELECT Id FROM act_Multas WHERE IdMult = @IdMult"
       },
       "EVEN": {
         "DBQE_SelectEventos": "SELECT (SELECT COUNT(*) FROM act_Eventos WHERE Estado = 'CONCURSO') AS TotalEventos, x.*, u.NombreYApellido AS NombreUsuario FROM act_Eventos x INNER JOIN act_User u ON x.IdUser = u.Id WHERE x.Estado = 'CONCURSO'",
