Objetivo 4 - Vistas. 1. GetData_IdCuota (COMPLETO).

--- a/act_Application/Data/json/config.json
+++ b/act_Application/Data/json/config.json
@@ -33,7 +33,7 @@
       },
       "CUOT": {
         "DBQC_SelectCoutasUser": "SELECT (SELECT COUNT(*) FROM act_Cuotas WHERE IdUser = @IdUser AND Estado = 'PENDIENTE') AS TotalCuotas, a.* FROM act_Cuotas a WHERE IdUser = @IdUser AND Estado = 'PENDIENTE'",
-        "DBQC_SelectIdCouta": "SELECT a.* FROM act_Cuotas a WHERE Id = @Id"
+        "DBQC_SelectIdCoutaIdCuot": "SELECT a.* FROM act_Cuotas a WHERE Id = @Id"
       },
       "DEST": {
         "DBQD_SelectDestino": "SELECT Id, NumeroCuentaB, NombreBanco FROM act_CuentasDestino"
