--- a/act_Application/Data/json/config.json
+++ b/act_Application/Data/json/config.json
@@ -6,7 +6,7 @@
         "DBQU_SelectListUser": "SELECT Id, NombreYApellido FROM act_User WHERE TipoUser = 'Socio' OR TipoUser = 'Administrador'",
         "DBQU_SelectEmail": "SELECT Correo FROM act_User WHERE Id =1",
         "DBQU_SelectIdUser": "SELECT Id FROM act_User WHERE Cedula = @Cedula",
-        "DBQU_SelectDataUserId": "SELECT Id, Cedula, Correo, TipoUser, NombreYApellido, Celular FROM act_User WHERE Id = @Id"
+        "DBQU_SelectDataUserId": "SELECT u.Id, u.Cedula, u.Correo, u.NombreYApellido, u.Celular, u.TipoUser, u.Estado, r.IdRol FROM act_User u LEFT JOIN act_RolUser r ON u.Id = r.IdUser WHERE u.Id = @Id"
       },
       "ROLE": {
         "DBQR_SelectRol": "SELECT * FROM act_Rol WHERE Id = @IdRol"
