--- a/act_Application/Data/json/config.json
+++ b/act_Application/Data/json/config.json
@@ -44,7 +44,7 @@
       "NOTI": {
         "DBQN_SelectAdmiNotificacion": "SELECT (SELECT COUNT(*) FROM act_Notificaciones WHERE Destino = 'ADMINISTRADOR') AS TotalNotificaciones, a.* FROM act_Notificaciones a WHERE a.Destino ='ADMINISTRADOR'",
         "DBQN_SelectUserNotificacion": "SELECT (SELECT COUNT(*) FROM act_Notificaciones WHERE Destino = @Id) AS TotalNotificaciones, a.* FROM act_Notificaciones a WHERE Destino = @Id",
-        "DBQN_SelectNotificacionesId": "SELECT a.* FROM act_Notificaciones WHERE Id = @Id"
+        "DBQN_SelectNotificacionesId": "SELECT a.* FROM act_Notificaciones a WHERE Id = @Id"
       }
     },
     "Assistant_Queries": {
