--- a/act_Application/act_Application.csproj
+++ b/act_Application/act_Application.csproj
@@ -24,6 +24,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\General\Notificaciones\Notificaciones_3.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\General\Notificaciones\Notificaciones_3.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.13">
@@ -42,6 +50,10 @@
   <ItemGroup>
     <Folder Include="wwwroot\css\General\Menu\" />
     <Folder Include="wwwroot\js\General\Menu\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\General\Notificaciones\Notificaciones_3.js" />
   </ItemGroup>
 
 </Project>
