Objetivo 4 - Vistas. 1. Correciones en Home para Eventos.

--- a/act_Application/Data/json/config.json
+++ b/act_Application/Data/json/config.json
@@ -26,7 +26,7 @@
       },
       "EVEN": {
         "DBQE_SelectEventos": "SELECT (SELECT COUNT(*) FROM act_Eventos WHERE Estado = 'CONCURSO') AS TotalEventos, x.*, u.NombreYApellido AS NombreUsuario FROM act_Eventos x INNER JOIN act_User u ON x.IdUser = u.Id WHERE x.Estado = 'CONCURSO'",
-        "DBQE_SelectEventosUser": "SELECT (SELECT COUNT(*) FROM act_Eventos WHERE Id = @Id) AS TotalEventos, a.* FROM act_Eventos a WHERE Id = @Id",
+        "DBQE_SelectEventosUser": "SELECT (SELECT COUNT(*) FROM act_Eventos WHERE Id = @Id) AS TotalEventos, a.*, b.NombreYApellido AS NombreUsuario FROM act_Eventos a INNER JOIN act_User b ON a.IdUser WHERE Id = @Id",
         "DBQE_SelectEventosIdEven": "SELECT Id FROM act_Eventos WHERE IdEven = @IdEven",
         "DBQE_SelectDataEventoIdPrestamo": "SELECT a.*, b.NombreYApellido AS NombreUsuario FROM act_Eventos a INNER JOIN act_User b ON a.IdUser WHERE IdPrestamo = @IdPrestamo"
       },
