--- a/express/src/Data/json/config.json
+++ b/express/src/Data/json/config.json
@@ -2,7 +2,7 @@
     "database": {
       "host": "192.168.21.193",
       "port": "3306",
-      "uid": "cgarcia",
+      "user": "cgarcia",
       "password": "cgarcia",
       "database": "act_desarrollo"
     }
